Fix bug with images that are too wide

--- a/_src/_includes/css/style.css
+++ b/_src/_includes/css/style.css
@@ -567,8 +567,8 @@ input[type="submit"]:focus {
 }
 
 /* Widths */
-.page-header > *,
-.post-header > *,
+.page-header > .title,
+.post-header > .title,
 .page-content > *,
 .post-content > * {
   max-width: 60ch;
